feat: localize penalties

--- a/Travel-Company.WPF/Resources/Components/PenaltyForm.xaml
+++ b/Travel-Company.WPF/Resources/Components/PenaltyForm.xaml
@@ -7,8 +7,12 @@
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:penalties="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Penalties"
              d:DataContext="{d:DesignInstance Type=penalties:PenaltiesUpdateViewModel}"
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:LocalizeDictionary.DesignCulture="ru-RU"
+             lex:ResxLocalizationProvider.DefaultAssembly="Travel-Company.WPF"
+             lex:ResxLocalizationProvider.DefaultDictionary="Strings"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="700" d:DesignWidth="800">
     <Grid Margin="15">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -22,20 +26,20 @@
                       Grid.Row="1">
             <StackPanel Margin="1 0 5 0">
                 <!-- Inputs -->
-                <TextBlock Text="Client"
+                <TextBlock Text="{lex:Loc Client}"
                            Style="{StaticResource ComponentTitle}" />
                 <ComboBox ItemsSource="{Binding Clients}"
                           SelectedItem="{Binding Penalty.Client}"
                           DisplayMemberPath="FullName"
                           Margin="0 0 0 10" />
 
-                <TextBlock Text="Amount"
+                <TextBlock Text="{lex:Loc Amount}"
                            Style="{StaticResource ComponentTitle}" />
-                <local:Input ComponentName="Amount"
+                <local:Input ComponentName="{lex:Loc Amount}"
                              Text="{Binding Penalty.CompensationAmount, Mode=TwoWay}"
                              Margin="0 0 0 10" />
-                
-                <TextBlock Text="Date"
+
+                <TextBlock Text="{lex:Loc Date}"
                            Style="{StaticResource ComponentTitle}" />
                 <DatePicker SelectedDate="{Binding Penalty.CompensationDate, Mode=TwoWay}"
                             DisplayDateStart="1/1/1900"
@@ -43,13 +47,13 @@
                             Margin="-2 0 0 10"
                             VerticalContentAlignment="Center" />
 
-                <TextBlock Text="Description"
+                <TextBlock Text="{lex:Loc Description}"
                            Style="{StaticResource ComponentTitle}" />
-                <local:Input ComponentName="Description"
+                <local:Input ComponentName="{lex:Loc Description}"
                              Text="{Binding Penalty.CompensationDescription, Mode=TwoWay}"
                              Margin="0 0 0 10" />
 
-                <TextBlock Text="Responsible person"
+                <TextBlock Text="{lex:Loc Responsible}"
                            Style="{StaticResource ComponentTitle}" />
                 <ComboBox ItemsSource="{Binding Employees}"
                           SelectedItem="{Binding Penalty.TourGuide}"
@@ -62,7 +66,7 @@
                             Margin="0 0 15 0"
                             Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:PenaltyForm}}, Path=RelayCommand}" />
                     <Button x:Name="ButtonCancel"
-                            Content="Cancel"
+                            Content="{lex:Loc ButtonCancel}"
                             Margin="0 0 15 0"
                             HorizontalAlignment="Left"
                             Command="{Binding CancelCommand}" />
