--- a/Travel-Company.WPF/MVVM/View/Penalties/PenaltiesView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Penalties/PenaltiesView.xaml
@@ -7,6 +7,10 @@
              xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
              xmlns:penalties="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Penalties"
              d:DataContext="{d:DesignInstance Type=penalties:PenaltiesViewModel}"
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:LocalizeDictionary.DesignCulture="ru-RU"
+             lex:ResxLocalizationProvider.DefaultAssembly="Travel-Company.WPF"
+             lex:ResxLocalizationProvider.DefaultDictionary="Strings"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="15">
@@ -24,21 +28,21 @@
         <!-- Search Bar -->
         <Grid Grid.Row="1"
               Margin="5">
-            <component:SearchBar Placeholder="Search" />
+            <component:SearchBar Placeholder="{lex:Loc SearchBarDefaultPlaceholder}" />
         </Grid>
 
         <!-- Buttons -->
         <StackPanel Grid.Row="2">
             <DockPanel Margin="5">
-                <Button Content="Add"
+                <Button Content="{lex:Loc ButtonAdd}"
                         Margin="0 0 15 0"
                         Command="{Binding NavigateToInsertingCommand}"
                         Style="{StaticResource CommandButton}" />
-                <Button Content="Edit"
+                <Button Content="{lex:Loc ButtonEdit}"
                         Margin="0 0 15 0"
                         Command="{Binding NavigateToUpdatingCommand}"
                         Style="{StaticResource CommandButton}" />
-                <Button Content="Delete"
+                <Button Content="{lex:Loc ButtonDelete}"
                         HorizontalAlignment="Left"
                         Command="{Binding DeleteSelectedItemCommand}"
                         Style="{StaticResource FireRemoveButton}" />
@@ -65,7 +69,7 @@
                           HorizontalScrollBarVisibility="Auto">
                     <DataGrid.Columns>
                         <!-- Fields -->
-                        <DataGridTemplateColumn Header="Full name"
+                        <DataGridTemplateColumn Header="{lex:Loc FullName}"
                                                 IsReadOnly="True"
                                                 Width="auto">
                             <DataGridTemplateColumn.CellTemplate>
@@ -83,23 +87,19 @@
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
 
-                        <DataGridTextColumn Header="Groups"
-                                            IsReadOnly="True"
-                                            Width="auto"
-                                            Binding="{Binding Path=Client.TouristGroups.Count}" />
-                        <DataGridTextColumn Header="Amount"
+                        <DataGridTextColumn Header="{lex:Loc Amount}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=CompensationAmount}" />
-                        <DataGridTextColumn Header="Date"
+                        <DataGridTextColumn Header="{lex:Loc Date}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=CompensationDate, StringFormat=dd/MM/yyyy}" />
-                        <DataGridTextColumn Header="Description"
+                        <DataGridTextColumn Header="{lex:Loc Description}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=CompensationDescription}" />
-                        <DataGridTextColumn Header="Responsible"
+                        <DataGridTextColumn Header="{lex:Loc Responsible}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=TourGuide.FullName}" />
