--- a/Travel-Company.WPF/MVVM/View/Groups/GroupsView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Groups/GroupsView.xaml
@@ -7,6 +7,10 @@
              xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
              xmlns:groups="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Groups"
              d:DataContext="{d:DesignInstance Type=groups:GroupsViewModel}"
+             xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             lex:LocalizeDictionary.DesignCulture="ru-RU"
+             lex:ResxLocalizationProvider.DefaultAssembly="Travel-Company.WPF"
+             lex:ResxLocalizationProvider.DefaultDictionary="Strings"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="15">
@@ -18,27 +22,27 @@
         </Grid.RowDefinitions>
         <!-- Page Header-->
         <TextBlock Grid.Row="0"
-                   Text="Tourist Groups"
+                   Text="{lex:Loc TouristGroups}"
                    Style="{StaticResource PageHeader}" />
 
         <!-- Search Bar -->
         <Grid Grid.Row="1"
               Margin="5">
-            <component:SearchBar Placeholder="Search" />
+            <component:SearchBar Placeholder="{lex:Loc SearchBarDefaultPlaceholder}" />
         </Grid>
 
         <!-- Buttons -->
         <StackPanel Grid.Row="2">
             <DockPanel Margin="5">
-                <Button Content="Add"
+                <Button Content="{lex:Loc ButtonAdd}"
                         Margin="0 0 15 0"
                         Command="{Binding NavigateToInsertingCommand}"
                         Style="{StaticResource CommandButton}" />
-                <Button Content="Edit"
+                <Button Content="{lex:Loc ButtonEdit}"
                         Margin="0 0 15 0"
                         Command="{Binding NavigateToUpdatingCommand}"
                         Style="{StaticResource CommandButton}" />
-                <Button Content="Delete"
+                <Button Content="{lex:Loc ButtonDelete}"
                         HorizontalAlignment="Left"
                         Command="{Binding DeleteSelectedItemCommand}"
                         Style="{StaticResource FireRemoveButton}" />
@@ -65,7 +69,7 @@
                           HorizontalScrollBarVisibility="Auto">
                     <DataGrid.Columns>
                         <!-- Fields -->
-                        <DataGridTemplateColumn Header="Name"
+                        <DataGridTemplateColumn Header="{lex:Loc Name}"
                                                 IsReadOnly="True"
                                                 Width="auto">
                             <DataGridTemplateColumn.CellTemplate>
@@ -83,15 +87,15 @@
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
 
-                        <DataGridTextColumn Header="Route"
+                        <DataGridTextColumn Header="{lex:Loc Route}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=Route.Name}" />
-                        <DataGridTextColumn Header="Tourists"
+                        <DataGridTextColumn Header="{lex:Loc Tourists}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=Clients.Count}" />
-                        <DataGridTextColumn Header="Responsible"
+                        <DataGridTextColumn Header="{lex:Loc Responsible}"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=TourGuide.FullName}" />
