--- a/Travel-Company.WPF/Resources/Components/GroupForm.xaml
+++ b/Travel-Company.WPF/Resources/Components/GroupForm.xaml
@@ -93,10 +93,10 @@
                                 Margin="5 58 9 0">
                         <Button Template="{StaticResource MoveItemToLeftButton}"
                                 Command="{Binding MoveItemToLeftCommand}"
-                                ToolTip="Add selected tourist" />
+                                ToolTip="{lex:Loc ArrowButtonToLeft}" />
                         <Button Template="{StaticResource MoveItemToRightButton}"
                                 Command="{Binding MoveItemToRightCommand}"
-                                ToolTip="Remove selected tourist" />
+                                ToolTip="{lex:Loc ArrowButtonToRight}" />
                     </StackPanel>
 
                     <!-- Available List -->
@@ -113,7 +113,7 @@
                                   Margin="0 8 4 0">
                             <DataGrid.Columns>
                                 <!-- Fields -->
-                                <DataGridTemplateColumn Header="{lex:Loc AvailableToAdd}"
+                                <DataGridTemplateColumn Header="{lex:Loc AvailableToAddText}"
                                                         IsReadOnly="True"
                                                         Width="auto">
                                     <DataGridTemplateColumn.CellTemplate>
