--- a/Travel-Company.WPF/Resources/Styles/Styles.xaml
+++ b/Travel-Company.WPF/Resources/Styles/Styles.xaml
@@ -91,6 +91,8 @@
                 Value="26" />
         <Setter Property="Focusable"
                 Value="False" />
+        <Setter Property="FontFamily"
+                Value="/Resources/Fonts/#Roboto" />
         <Setter Property="Cursor"
                 Value="Hand" />
         <Setter Property="Template">
