--- a/Travel-Company.WPF/Resources/Styles/Colors.xaml
+++ b/Travel-Company.WPF/Resources/Styles/Colors.xaml
@@ -11,7 +11,7 @@
     <Color x:Key="Primary6">#6ebef7</Color>
     <Color x:Key="Primary7">#8bcbf9</Color>
     <Color x:Key="Primary8">#a5d5f8</Color>
-    <Color x:Key="Primary9">#cceaff</Color>
+    <Color x:Key="Primary9">#ddebf5</Color>
     <Color x:Key="Primary10">#ebf7ff</Color>
     
     <!-- Headings -->
